Major changes in combat system and EnemiesFactory, small adjustments in story