@@ -1,11 +1,8 @@
 package config;
 
-import characters.Enemy;
 import map.Places;
-import map.Places.Room;
 import characters.Player;
 import combat.Item;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 
@@ -55,14 +52,12 @@ public class Game {
         gameStarted = true;
         GameStory.intro();
 
-        // Iniciamos el juego en la HOUSE directamente (ya inicializada en el enum)
+        // Start in HOUSE (already initialized in the enum)
         currentPlace = Places.HOUSE;
-
-        // Por defecto, la "currentRoom" de House se definió en el bloque estático del enum
         System.out.println(currentPlace.getCurrentRoom());
 
         player = new Player("Player", 100);
-        // Se agrega un arma inicial
+        // Add an initial weapon
         player.addWeaponToInventory(combat.WeaponFactory.FIST);
 
         gameLoop();
@@ -114,14 +109,13 @@ public class Game {
     }
 
     private void searchRoom() {
-
-        Room r = currentPlace.getCurrentRoom();
+        Places.Room r = currentPlace.getCurrentRoom();
         Scanner sc = new Scanner(System.in);
 
         if (!r.getEnemiesInRoom().isEmpty()) {
             System.out.println("\n¡Oh Fuck! " + r.getEnemiesInRoom().size() + " enemies heard me!");
 
-            for (Enemy.Zombie enemy : r.getEnemiesInRoom()) {
+            for (characters.Enemy.Zombie enemy : r.getEnemiesInRoom()) {
                 System.out.println(" - " + enemy.getName());
             }
 
@@ -133,65 +127,62 @@ public class Game {
             System.out.println("Do you want to interact ? y/n");
             String response = sc.nextLine();
 
-            while (!response.equalsIgnoreCase("y") && (!response.equalsIgnoreCase("n"))){
+            while (!response.equalsIgnoreCase("y") && (!response.equalsIgnoreCase("n"))) {
                 System.out.println("Invalid Answer. Do you want to interact ? y/n");
                 response = sc.nextLine();
             }
             if (response.equalsIgnoreCase("y")){
-            System.out.println(r.getNpc().getDialogue());
+                System.out.println(r.getNpc().getDialogue());
                 if (!r.getNpc().hasGivenKey() && r.getNpc().getKey() != null) {
                     player.addKeyItem((Item.KeyItem) r.getNpc().getKey());
                     r.getNpc().giveKey();
                 }
-            }
-            else{
-                System.out.println("I should keep moving then...");;
-            }
-        }
-
-            if (!r.getItemsInRoom().isEmpty()) {
-                System.out.println("\nNice, I found:");
-
-                for (Item item : r.getItemsInRoom()) {
-                    System.out.println(" - " + item.getName());
-                }
-
-                System.out.println("\nIt could be useful, should keep it.");
-                System.out.print("Do you want to save items in inventory? (Y/N): ");
-
-                String response = sc.nextLine().trim().toLowerCase();
-
-                while (!response.equals("y") && !response.equals("n")) {
-                    System.out.print("Invalid response. Please enter Y or N: ");
-                    response = sc.nextLine().trim().toLowerCase();
-                }
-
-                if (response.equals("y")) {
-                    List<Item> foundItems = new ArrayList<>(r.getItemsInRoom());
-
-                    for (Item i : foundItems) {
-                        if (i instanceof Item.HealingItem) {
-                            player.addHealingItem((Item.HealingItem) i);
-                        } else if (i instanceof Item.Munition) {
-                            player.addMunition((Item.Munition) i);
-                        } else if (i instanceof Item.KeyItem) {
-                            player.addKeyItem((Item.KeyItem) i);
-                        } else if (i instanceof combat.Weapon) {
-                            player.addWeaponToInventory((combat.Weapon) i);
-                        }
-                        r.getItemsInRoom().remove(i);
-                    }
-
-                    System.out.println("\nAll items have been stored in your inventory.");
-                } else {
-                    System.out.println("\nYou decided to leave the items in the room.");
-                }
             } else {
-                System.out.println("\nThere are no items in this room.");
+                System.out.println("I should keep moving then...");
             }
         }
 
+        if (!r.getItemsInRoom().isEmpty()) {
+            System.out.println("\nNice, I found:");
 
+            for (Item item : r.getItemsInRoom()) {
+                System.out.println(" - " + item.getName());
+            }
+
+            System.out.println("\nIt could be useful, should keep it.");
+            System.out.print("Do you want to save items in inventory? (Y/N): ");
+
+            String response = sc.nextLine().trim().toLowerCase();
+
+            while (!response.equals("y") && !response.equals("n")) {
+                System.out.print("Invalid response. Please enter Y or N: ");
+                response = sc.nextLine().trim().toLowerCase();
+            }
+
+            if (response.equals("y")) {
+                List<Item> foundItems = new java.util.ArrayList<>(r.getItemsInRoom());
+
+                for (Item i : foundItems) {
+                    if (i instanceof Item.HealingItem) {
+                        player.addHealingItem((Item.HealingItem) i);
+                    } else if (i instanceof Item.Munition) {
+                        player.addMunition((Item.Munition) i);
+                    } else if (i instanceof Item.KeyItem) {
+                        player.addKeyItem((Item.KeyItem) i);
+                    } else if (i instanceof combat.Weapon) {
+                        player.addWeaponToInventory((combat.Weapon) i);
+                    }
+                    r.getItemsInRoom().remove(i);
+                }
+
+                System.out.println("\nAll items have been stored in your inventory.");
+            } else {
+                System.out.println("\nYou decided to leave the items in the room.");
+            }
+        } else {
+            System.out.println("\nThere are no items in this room.");
+        }
+    }
 
     private void startCombat(List<characters.Enemy.Zombie> enemies) {
         combat.CombatActions actions = new combat.CombatActions();
@@ -220,39 +211,48 @@ public class Game {
                 System.out.println(count + ") " + z.getName() + " (HP: " + z.getHp() + ")");
                 count++;
             }
-            System.out.println("a) Attack");
-            System.out.println("b) Use Herb");
-            String choice = sc.nextLine().toLowerCase();
-            if (choice.equalsIgnoreCase("a")) {
-                System.out.println("Which enemy?");
-                String num = sc.nextLine();
-                int idx;
-                try {
-                    idx = Integer.parseInt(num) - 1;
-                } catch (Exception e) {
-                    System.out.println("Invalid choice.");
-                    continue;
-                }
-                if (idx < 0 || idx >= enemies.size()) {
-                    System.out.println("Invalid choice.");
-                    continue;
-                }
-                characters.Enemy.Zombie target = enemies.get(idx);
-                if (target.getHp() <= 0) {
-                    System.out.println("That zombie is already dead.");
-                    continue;
-                }
 
-                // Choose weapon
-                combat.Weapon chosenWeapon = chooseWeapon();
-                if (chosenWeapon != null) {
-                    actions.playerAttack(player, target, chosenWeapon);
+            boolean validTurn = false;
+            while (!validTurn) {
+                System.out.println("Choose an action:");
+                System.out.println("a) Attack");
+                System.out.println("b) Use Herb");
+                String choice = sc.nextLine().toLowerCase();
+                if (choice.equals("a")) {
+                    System.out.println("Which enemy?");
+                    String num = sc.nextLine();
+                    int idx;
+                    try {
+                        idx = Integer.parseInt(num) - 1;
+                    } catch (Exception e) {
+                        System.out.println("Invalid choice.");
+                        continue;
+                    }
+                    if (idx < 0 || idx >= enemies.size()) {
+                        System.out.println("Invalid choice.");
+                        continue;
+                    }
+                    characters.Enemy.Zombie target = enemies.get(idx);
+                    if (target.getHp() <= 0) {
+                        System.out.println("That zombie is already dead.");
+                        continue;
+                    }
+                    combat.Weapon chosenWeapon = chooseWeapon();
+                    if (chosenWeapon != null) {
+                        actions.playerAttack(player, target, chosenWeapon);
+                        validTurn = true;
+                    } else {
+                        System.out.println("No valid weapon chosen.");
+                    }
+                } else if (choice.equals("b")) {
+                    useHerb();
+                    validTurn = true;
+                } else {
+                    System.out.println("Invalid action. Please choose a valid option.");
                 }
-            } else if (choice.equals("b")) {
-                useHerb();
             }
 
-            // Zombies attack after the player's turn if they are still alive
+            // After a valid player turn, zombies attack if still alive
             for (characters.Enemy.Zombie z : enemies) {
                 if (z.getHp() > 0 && player.getHp() > 0) {
                     actions.zombieAttack(player, z);
@@ -266,7 +266,7 @@ public class Game {
 
     private combat.Weapon chooseWeapon() {
         Scanner sc = new Scanner(System.in);
-        List<combat.Weapon> weapons = player.getInventoryWeapons();
+        java.util.List<combat.Weapon> weapons = player.getInventoryWeapons();
         if (weapons.isEmpty()) {
             System.out.println("You have no weapons.");
             return null;
@@ -317,11 +317,11 @@ public class Game {
 
     private void useHerb() {
         if (!player.getInventoryHealingItems().isEmpty()) {
-            int heal = player.getInventoryHealingItems().getFirst().getHealingPoints();
+            int heal = player.getInventoryHealingItems().get(0).getHealingPoints();
             player.setHp(Math.min(player.getHp() + heal, 100));
-            System.out.println("Used " + player.getInventoryHealingItems().getFirst().getName()
+            System.out.println("Used " + player.getInventoryHealingItems().get(0).getName()
                     + " +" + heal + " HP");
-            player.getInventoryHealingItems().removeFirst();
+            player.getInventoryHealingItems().remove(0);
         } else {
             System.out.println("No healing items");
         }
